--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,5 +16,11 @@
   } @else if ($direction == up) {
     transform: rotate(-135deg);
     top: $width/2 + 1;
+  } @else if ($direction == left) {
+    transform: rotate(135deg);
+    left: $width/2;
+  } @else if ($direction == right) {
+    transform: rotate(-45deg);
+    right: $width/2;
   }
 }
